--- a/static/templates/list.html
+++ b/static/templates/list.html
@@ -64,6 +64,22 @@
             }
         }
     </style>
+
+    <script>
+    window.onload = function () {
+        let labels = document.querySelectorAll("fieldset div label");
+
+        for (var i = 0; i < labels.length; i++) {
+            let text = labels[i].querySelector("span").textContent
+
+            if (text == "确认") {
+                labels[i].style.backgroundColor = "lightGreen";
+            } else {
+                labels[i].style.backgroundColor = "orange";
+            }
+        }
+    }
+    </script>
 </head>
 <body style="background-color: white">
 {{ range .Venues }}
@@ -143,7 +159,8 @@
         结束场地：
         <input type="hidden" name="venueId" value="{{ .ID }}">
         <input type="hidden" name="ticket" value="{{ $.Ticket }}">
-        <input type="text" size="6" name="money" placeholder="金额">
+        <input type="text" size="3" name="venueFee" placeholder="场地费">
+        <input type="text" size="3" name="ballFee" placeholder="球费">
         <input type="submit" value="结束">
     </form>
     {{ end }}
