--- a/static/templates/list.html
+++ b/static/templates/list.html
@@ -161,6 +161,7 @@
         <input type="hidden" name="ticket" value="{{ $.Ticket }}">
         <input type="text" size="3" name="venueFee" placeholder="场地费">
         <input type="text" size="3" name="ballFee" placeholder="球费">
+        <input type="text" size="3" name="trainingFee" placeholder="训练费">
         <input type="submit" value="结束">
     </form>
     {{ end }}
